--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
       <p>
          <a href = "https://www.esa.int/Science_Exploration/Space_Science/What_is_red_shift#:~:text=%27Red%20shift%27%20is%20a%20key,moves%20relative%20to%20an%20observer." target = "_blank">Learn more about redshift</a>
       </p>
-   </body>
-   <footer>
-      &copyCopyright 2024, Juan Carrera Bravo
+		<footer>
+      &copy; Copyright 2024, Juan Carrera Bravo
    </footer>
+   </body>
 </html>
